# freeutils

./: README.md  pyproject.toml
freeutils/: mydecimal.py  mystring.py
