[tool.poetry]
name = "freeutils"
version = "0.0.1"
description = "Small utilities for my projects"
authors = ["Romooper <romanshupik32@gmail.com>"]
license = "BSD-3-Clause license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
